<resources>
    <!--shyam-->
    <string name="app_name">HandMeDown</string>
    <string name="email">Email</string>
    <string name="login">Login now</string>
    <string name="not_a_member_yet_signup_now">not a member yet signup now</string>
    <string name="password">password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm_password</string>
    <string name="cancel">cancel</string>
    <string name="signup">Join now</string>
    <string name="phone_number">phone number</string>
    <string name="already_a_member_sign_in">Already a member? Sign in!</string>
    <string name="Terms">By joining I agree to HandMeDown\'s terms and Conditions,privacy Policy and end user licence agreement. I also consent to receive marketing emails from HandmeDown which I can opt out of at the bottom of each email.</string>
    <string name="i_agree_terms_of_services">I agree terms of services</string>
    <string name="having_a_problem_contact_us">Having a problem? Contact us</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="no_problem_just_let_us_know_the_email_address_you_use_with_handmedown_and_we_will_send_you_instruction_to_set_a_new_password">No Problem. Just let us know the email address you use with HandMeDown and we will send you Instruction to set a new Password.</string>
    <string name="send_me_instructions">Send Me Instructions</string>
    <string name="title_activity_firsttimelocation">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">

AIzaSyDWbtJiMLCwwVc5nqDmiK7_prACoJbD-VA

</string>
    <string name="select_location">Select Location</string>

    <string-array name="days">
        <item>Select best days for food</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <!---nicholis-->

    <string name="logo_image_description">HandMeDown logo image</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="btn_forgot_password_text">Forgot Password?</string>
    <string name="btn_login_text">Login</string>
    <string name="text_no_account">Don\'t have an account?</string>
    <string name="btn_register_text">Register here </string>
    <string name="txt_first_name_hint">First Name</string>
    <string name="txt_last_name_hint">Last Name</string>
    <string name="txt_email_address_hint">Email address</string>
    <string name="txt_confirm_password_hint">Confirm Password</string>
    <string name="password_reset_instructions">Enter your email address. We will send a link to reset your password.</string>
    <string name="btn_send_text">Send</string>
    <string name="btn_set_home_text">Set Home Location</string>
    <string name="btn_choose_location_text">Choose your location</string>
    <string name="btn_home_description">Home button</string>
    <string name="btn_profile_description">Profile button</string>
    <string name="list_item_image_description">List item preview image</string>
    <string name="title_field_hint">Title</string>
    <string name="description_field_hint">Description</string>
    <string name="pickup_time_field_hint">Pick up times</string>
    <string name="list_duration_field_hint">List for</string>
    <string name="pickup_location_field_hint">Set pickup location</string>
    <string name="btn_submit_text">Submit</string>
    <string name="listing_image_preview_description">Listing image preview</string>
    <string name="activity_add_listing_title">Add listing</string>
    <string name="activity_donation_requests_title">Donation Requests</string>
    <string name="btn_accept_text"> Accept </string>
    <string name="btn_reject_text">  Reject  </string>
    <string name="txt_placeholder">Loading</string>
    <string name="donation_user_name_placeholder">Offered by</string>
    <string name="donation_distance_placeholder">0m</string>
    <string name="placeholder_loading">Loading</string>
    <string name="btn_request_listing_text">Request Listing</string>

    <!--Mounil-->
    <string name="your_listing">Your Listing</string>
    <string name="faqs">FAQ\'s</string>
    <string name="termsandconditions">Terms &amp; Conditions</string>
    <string name="feedback">Feedback</string>
    <string name="aboutus">About Us</string>
    <string name="signout">Sign Out?</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mounil Shah</string>
    <string name="nav_header_subtitle">mounil3196@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="view_donations">View Donations</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
